Changelog for Shake

    #60, improve how command lines are printed out
    #113, print info about copyFile' and removeFilesAfter at -V
    Replace **> with |*> , ?>> with &?> and *>> with &*>
    IMPORTANT: Incompatible on disk format change
    #83, support digest rules for files
    #83, add shakeChange parameter and --digest* args
    #83, add equalValue function to Rule typeclass
    Deprecate defaultRule
    Make literal *> matches take precedence over wildcard matches
    #120, add a priority function
0.12
    #62, move to a ReaderT/IORef for the Action monad
    Add DEPRECATED pragmas on system' calls
    Delete Development.Shake.Sys, use command or cmd instead
    Add a 'console' pool to Ninja
    Avoid using System.Cmd (deprecated in GHC HEAD)
    #41, use higher precision file times on POSIX
    #117, use higher precision times for Unicode files on Windows
    #118, add support for Ninja -t compdb
    #119, more test fixes for Linux GHC 7.8
0.11.7
    #119, test fixes for Linux GHC 7.8
0.11.6
    #114, run build.sh in the test suite with sh
    #115, fix the test suite on Linux GHC 7.8
    #116, fix for GHC 7.10
0.11.5
    Include the sources for flot and jQuery in the dist tarball
    Note that .. in FilePattern values is unlikely to be correct
    #109, make removeFiles delete directories that match
    #84, make removeFiles not delete empty unmatched directories
    #111, fixes to the user manual
    #110, don't give a warning if -threaded is turned off
    #103, don't suggest -qg and -qb, they fail without -threaded
    #102, fix up </> when the LHS starts with .
0.11.4
    Work with QuickCheck-2.7 (which defines ===)
    #100, handle GraphViz missing gracefully
    Fix up the profiling report generation
    #99, add getEnvWithDefault
0.11.3
    #97, fix a serialisation bug when > 254 arguments to need
0.11.2
    #96, fix a bug in addPath that caused $PATH to be added twice
0.11.1
    #94, GHC 7.8 support
    Add a Config module